@@ -2924,14 +2924,16 @@ DRIVER(jb,04a)          //                  Jack*Bot (0.4A Prototype)
 DRIVER(jm,05r)          //WPC-542:  09/95 W Johnny Mnemonic (0.5R)
 DRIVER(jm,12r)          //          10/95 W Johnny Mnemonic (1.2R)
 DRIVER(jm,12b)          //          10/95 W Johnny Mnemonic (1.2 Belgian)
-DRIVER(wd,03r)          //WPC-544:  09/95 B Who dunnit (0.3 R)
-DRIVER(wd,048r)         //          10/95 B Who dunnit (0.48 R)
-DRIVER(wd,10r)          //          11/95 B Who dunnit (1.0 R)
-DRIVER(wd,10g)          //          11/95 B Who dunnit (1.0 German)
-DRIVER(wd,10f)          //          11/95 B Who dunnit (1.0 French)
-DRIVER(wd,11)           //         ?04/96 B Who dunnit (1.1)
-DRIVER(wd,12)           //         ?05/96 B Who dunnit (1.2)
-DRIVER(wd,12g)          //         ?05/96 B Who dunnit (1.2 German)
+DRIVER(wd,03r)          //WPC-544:  09/95 B WHO Dunnit (0.3 R)
+DRIVER(wd,048r)         //          10/95 B WHO Dunnit (0.48 R)
+DRIVER(wd,10r)          //          11/95 B WHO Dunnit (1.0 R)
+DRIVER(wd,10g)          //          11/95 B WHO Dunnit (1.0 German Sound)
+DRIVER(wd,10f)          //          11/95 B WHO Dunnit (1.0 French)
+DRIVER(wd,11)           //         ?04/96 B WHO Dunnit (1.1)
+DRIVER(wd,12)           //         ?05/96 B WHO Dunnit (1.2)
+DRIVER(wd,12p)          //         ?05/96 B WHO Dunnit (1.2 / Elevator text fix)
+DRIVER(wd,12g)          //         ?05/96 B WHO Dunnit (1.2 German Sound)
+DRIVER(wd,12gp)         //         ?05/96 B WHO Dunnit (1.2 German Sound / Elevator text fix)
 DRIVER(congo,11s10)     //WPC-550:  11/95 W Congo (1.1, DCS-Sound 1.0)
 DRIVER(congo,11)        //          11/95 W Congo (1.1)
 DRIVER(congo,13)        //          11/95 W Congo (1.3)
